tests/misc_errors/for_in.out
error: for_in.li 1,10: `int` is not iterable
    1 | for i in 10 {
      |          ^^
